--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ p{
 nav{
     max-width: 1340px;
     margin: 0 auto;
-    padding: 50px 20px 0 20px;
+    padding: 40px 20px 0 20px;
     max-height: 80px;
     position: sticky;
 }
@@ -69,7 +69,7 @@ nav{
     list-style: none;
     padding: 10px 5px;
     margin-right: 25px;
-    
+    overflow: hidden;    
 }
 
 .menu ul li a{
@@ -91,12 +91,15 @@ nav{
     background-color: var(--main-color);
     bottom: 0;
     left: 0;
-    display: none;
+    transform: translateX(-120%);
+    
 }
 
 
 .menu ul li:hover a:after{
-    display: block;
+    transform: translateX(0%);
+    transition: transform 0.1s linear;
+    overflow: hidden;
 }
 
 .search{
@@ -124,8 +127,9 @@ nav{
 }
 
 .heroInfo p{
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 500;
+    margin: 10px 0px;
 }
 
 .primaryButton{
@@ -161,6 +165,7 @@ nav{
 .arrow{
     font-size: 24px;
     vertical-align: middle;
+    transition: 0.3s ease-in;
 }
 
 
@@ -187,7 +192,26 @@ nav{
     }
 }
 
+/* logo section css*/
 
+.clientLogos{
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    align-items: center;
+    max-width: 1180px;
+    margin: 0 auto;
+    padding: 30px 15px;
+    border-top: 3px solid #c0ccda36;
+    border-bottom: 3px solid #c0ccda36;
+    justify-content: center;
+}
+
+.clientLogos img{
+    max-width: 90px;
+    Height: auto;
+    margin: 0 auto;
+    cursor: pointer;
+}
 
 
 
