--- a/css/responsive.css
+++ b/css/responsive.css
@@ -87,7 +87,24 @@
     .heroImage img {
         max-width: 360px;
     }
-    
+    .collectionBoxes{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 35px 35px;
+    }
+    .clientLogos img {
+        max-width: 71px;
+        Height: auto;
+        margin: 0 auto;
+        cursor: pointer;
+    }
+    .menu ul {
+        display: none;
+    }
+
+    .heroInfo h1 {
+        font-size: 32px;
+    }
   }
   
   /* 
@@ -100,7 +117,31 @@
     .heroImage img {
         max-width: 360px;
     }
-    
+    .collectionBoxes{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 35px 35px;
+    }
+    .clientLogos img {
+        max-width: 71px;
+        Height: auto;
+        margin: 0 auto;
+        cursor: pointer;
+    }
+    .menu ul {
+        display: none;
+    }
+
+    .heroInfo h1 {
+        font-size: 32px;
+    }
+
+    .collectionBoxesInner:last-child{
+        display: none;
+    }
+    .lstbox{
+        display: none;
+    }
   }
   
   /* 
@@ -164,8 +205,42 @@
         display: none;
     }
 
+    .search{
+        display: none;
+    }
+
+
+    nav {
+        max-width: 1340px;
+        margin: 0 auto;
+        padding: 20px 10px 20px 10px;
+        max-height: 80px;
+        position: sticky;
+    }
+
     .heroImage{
         margin: 0 auto;
+    }
+
+    .clientLogos{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        gap: 30px;
+        max-width: 1180px;
+        margin: 0 auto;
+        padding: 30px 20px;
+        border-top: 3px solid #c0ccda36;
+        border-bottom: 3px solid #c0ccda36;
+    }
+
+    .collectionBoxes{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 28px 28px;
+    }
+    .lstbox{
+        display: none;
     }
     
   }
@@ -258,6 +333,12 @@
         padding: 30px 20px;
         border-top: 3px solid #c0ccda36;
         border-bottom: 3px solid #c0ccda36;
+    }
+
+    .collectionBoxes{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 28px 28px;
     }
     
   }
