--- a/css/style.css
+++ b/css/style.css
@@ -213,5 +213,99 @@ nav{
     cursor: pointer;
 }
 
+/* Collection css start here */
 
+.collection{
+    padding: 80px 0px;
+}
 
+.collectionHeader h2{
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 40px;
+}
+
+.collectionContainer{
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 0px 20px 0 20px;
+}
+
+.collectionBoxes{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 28px 28px;
+}
+
+.collectionBoxesInner{
+    padding: 15px;
+    box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.035);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.collectionBoxesInner img{
+    width: 100%;
+}
+
+.collectionBoxesInner h3{
+    font-size: 28px;
+    font-weight: 500;
+}
+
+.price{
+    font-size: 24px !important;
+    font-weight: 500;
+    margin: 5px 0px;
+}
+
+.rating{
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.rating i{
+    color: #FB8200;
+    font-size: 15px;
+    margin-right: 2px;
+}
+
+.rating p{
+    margin-left: 5px;
+    font-size: 15px;
+    color: #5E6366;
+    font-weight: 600;    ;
+}
+
+.collectionBoxesInner p{
+    font-size: 15px;
+    color: #5E6366;
+    font-weight: 600;  
+}
+
+.seemore{
+    float: right;
+    margin: 20px 0px;
+    border: none;
+    background-color: transparent;
+    vertical-align: middle;
+}
+
+.seemore a{
+    text-decoration: none;
+    color: var(--main-color);
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    
+}
+
+.seemore i{
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    vertical-align: middle;
+    margin-bottom: 5px;
+    color: var(--main-color);
+}
