--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,10 @@ nav{
     margin-right: 25px !important;
 }
 
+.target{
+    display: none;
+}
+
 /* Header/nav css end here */
 
 /* Hero section start here */
@@ -121,6 +125,13 @@ nav{
 .hero{
     padding: 40px 0px;
 }
+
+
+.hero:hover .heroImage img{
+    transform: translateX(30px);
+    transition: transform 0.6s ease-in;
+}
+
 
 .heroInfo h1{
     font-size: 52px;
@@ -195,8 +206,8 @@ nav{
 /* logo section css*/
 
 .clientLogos{
-    display: grid;
-    grid-template-columns: repeat(7,1fr);
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
     max-width: 1180px;
     margin: 0 auto;
@@ -204,6 +215,10 @@ nav{
     border-top: 3px solid #c0ccda36;
     border-bottom: 3px solid #c0ccda36;
     justify-content: center;
+}
+
+.target{
+    display: none;
 }
 
 .clientLogos img{
@@ -308,4 +323,97 @@ nav{
     vertical-align: middle;
     margin-bottom: 5px;
     color: var(--main-color);
+}
+
+
+/* Call to action css start here */
+
+.callToActionsection{
+    padding: 80px 0px;
+    background-color: #f4f4f4;
+}
+
+.callToActionInner{
+    padding: 0px 30px 0px 0px;
+}
+
+.callToActionInner h2{
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+
+.numbers{
+    display: flex;
+    max-width: 500px;
+    margin-top: 20px;
+}
+
+.iconText i{
+    font-size: 35px;
+    padding: 10px;
+    background-color: var(--secondary-color);
+    color: white;
+    border-radius: 50%;
+}
+
+.CallToActionImg{
+    max-width: 550px;
+    margin-left: auto;
+    border-radius: 15px;
+}
+
+.numberInner h3{
+    font-size: 35px;
+    color: var(--main-color);
+}
+
+.numberInner h5{
+    font-size: 20px;
+}
+
+.numberInner p{
+    font-weight: 500;
+    color: #5E6366;
+}
+
+
+/* Call to action css end here */
+
+/* footer css start here */
+
+footer{
+    background-color: #0A0826;
+    padding: 60px 0px;
+    color: white;
+}
+
+.footerInner{
+    margin: 0 auto;
+    text-align: center;
+}
+
+.footerInner h2{
+    color: white;
+    font-size: 26px;
+}
+
+.footerInner p{
+    color: white;
+    font-size: 16px;
+    margin: 10px 0px;
+}
+
+.socialIcons i{
+    background-color: #22213C;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 25px;
+    margin: 8px 5px 0px 5px;
+}
+
+.socialIcons i:hover{
+    background-color: #ffffff;
+    color: #22213C;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in;
 }
